[package]
name = "dlx"
version = "0.1.0"
edition = "2021"

[dependencies]
bytes = "1.1.0"
clap = { version = "3.1.18", optional = true, features = ["derive"] }
discrim = "0.1.1"

[features]
cli = ["clap"]

[[bin]]
name = "emu"
path = "src/bin/emu.rs"
required-features = ["cli"]

[[bin]]
name = "viz"
path = "src/bin/viz.rs"
required-features = ["cli"]
