[package]
name = "tinyc"
authors = ["Arthur Lafrance <lafranca@uci.edu>"]
description = "The Tiny compiler"
version = "0.1.0"
edition = "2021"

[dependencies]
bimap = "0.6.2"
bytes = "1.1.0"
clap = { version = "3.1.6", features = ["derive"] }
dlx = { path = "../dlx" }
maplit = "1.0.2"

[features]

[dev-dependencies]
uuid = { version = "1.0.0", features = ["v4"] }
